git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@14300 d2347644-e8e6-0310-9099-9a715ae17836

--- a/configure.in
+++ b/configure.in
@@ -201,6 +201,7 @@ dnl  **************************************************************************/
 
 dnl Substitutions to do.
 AC_SUBST(BITS)
+AC_SUBST(DEFINE_HAS_CLAN_LIB)
 AC_SUBST(ac_aux_dir)
 
 dnl Configure Makefiles.
@@ -216,7 +217,6 @@ AC_CONFIG_FILES([
 	[test -z "$CONFIG_HEADERS" || echo timestamp > source/stamp-h.in])
 
 AC_OUTPUT
-
 
 echo "             /*-----------------------------------------------*"
 echo "              *          Candl configuration is OK            *"
