git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@14304 d2347644-e8e6-0310-9099-9a715ae17836

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -62,9 +62,11 @@ TEST_FILES             	=			\
 TEST_FILES_DEP			= $(TEST_FILES:.scop=.c.dep)
 TEST_FILES_CANDL		= $(TEST_FILES:.scop=.c.candl)
 TEST_FILES_STRUCT		= $(TEST_FILES:.scop=.c.struct)
+TEST_FILES_OPT			= $(TEST_FILES:.scop=.opt.scop)
 
 TEST_FILES_CLEAN_CANDL		= $(TEST_FILES:.scop=.candltest)
 TEST_FILES_CLEAN_SCOP		= $(TEST_FILES:.scop=.scoptest)
+TEST_FILES_CLEAN_OPTSCOP	= $(TEST_FILES:.scop=.optscoptest)
 TEST_FILES_CLEAN_STRUCT		= $(TEST_FILES:.scop=.structest)
 
 BASE_TEST_FILES			= $(TEST_FILES:.scop=)
@@ -72,6 +74,7 @@ BASE_TEST_FILES			= $(TEST_FILES:.scop=)
 CLEANFILES			=		\
 	$(TEST_FILES_CLEAN_CANDL)		\
 	$(TEST_FILES_CLEAN_SCOP)		\
+	$(TEST_FILES_CLEAN_OPTSCOP)		\
 	$(TEST_FILES_CLEAN_STRUCT)
 
 
@@ -80,6 +83,7 @@ EXTRA_DIST	+=				\
 	$(TEST_FILES_DEP)			\
 	$(TEST_FILES_CANDL)			\
 	$(TEST_FILES_STRUCT)			\
+	$(TEST_FILES_OPT)			\
 	$(check_SCRIPTS)
 
 
