--- a/include/candl/candl.h.in
+++ b/include/candl/candl.h.in
@@ -15,17 +15,17 @@
  * Copyright (C) 2003-2008 Cedric Bastoul                                     *
  *                                                                            *
  * This is free software; you can redistribute it and/or modify it under the  *
- * terms of the GNU General Public License as published by the Free Software  *
- * Foundation; either version 2 of the License, or (at your option) any later *
- * version.                                                                   *
+ * terms of the GNU Lesser General Public License as published by the Free    *
+ * Software Foundation; either version 3 of the License, or (at your option)  *
+ * any later version.                                                         *
  *                                                                            *
  * This software is distributed in the hope that it will be useful, but       *
  * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY *
  * or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License   *
  * for more details.                                                          *
  *                                                                            *
- * You should have received a copy of the GNU General Public License along    *
- * with software; if not, write to the Free Software Foundation, Inc.,        *
+ * You should have received a copy of the GNU Lesser General Public License   *
+ * along with software; if not, write to the Free Software Foundation, Inc.,  *
  * 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA                     *
  *                                                                            *
  * CAnDL, the Chunky Dependence Analyser                                      *
@@ -79,9 +79,10 @@
 # define CANDL_TEMP_OUTPUT "candl.temp"
 
 /* Useful macros. */
-#define CANDL_max(x,y)    ((x) > (y)? (x) : (y))
-#define CANDL_min(x,y)    ((x) < (y)? (x) : (y))
+# define CANDL_max(x,y)    ((x) > (y)? (x) : (y))
+# define CANDL_min(x,y)    ((x) < (y)? (x) : (y))
 
+# define CANDL_FAIL(msg)   { fprintf(stderr, "[Candl] " msg "\n"); exit(1); }
 
 /******************************************************************************
  *                                   FORMAT                                   *
