--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -14,17 +14,17 @@
 # * Copyright (C) 2003-2008 Cedric Bastoul                                    *
 # *                                                                           *
 # * This is free software; you can redistribute it and/or modify it under the *
-# * terms of the GNU General Public License as published by the Free Software *
-# * Foundation; either version 2 of the License, or (at your option) any      *
-# * later version.							      *
+# * terms of the GNU Lesser General Public License as published by the Free   *
+# * Software Foundation; either version 3 of the License, or (at your option) *
+# * any later version.							      *
 # *                                                                           *
 # * This software is distributed in the hope that it will be useful, but      *
 # * WITHOUT ANY WARRANTY; without even the implied warranty of                *
 # * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General *
 # * Public License for more details.                                          *
 # *                                                                           *
-# * You should have received a copy of the GNU General Public License along   *
-# * with software; if not, write to the Free Software Foundation, Inc.,       *
+# * You should have received a copy of the GNU Lesser General Public License  *
+# * along with software; if not, write to the Free Software Foundation, Inc., *
 # * 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA                    *
 # *                                                                           *
 # * CAnDL, the Chunky Dependence Analyser                                     *
@@ -64,11 +64,13 @@ TEST_FILES_CANDL		= $(TEST_FILES:.scop=.candl)
 TEST_FILES_STRUCT		= $(TEST_FILES:.scop=.struct)
 TEST_FILES_OPT			= $(TEST_FILES:.scop=.opt.scop)
 TEST_FILES_SCAL			= $(TEST_FILES:.scop=.scalstruct)
+TEST_FILES_DEPSCOP		= $(TEST_FILES:.scop=.depscop)
 
 TEST_FILES_CLEAN_CANDL		= $(TEST_FILES:.scop=.candltest)
 TEST_FILES_CLEAN_OPTSCOP	= $(TEST_FILES:.scop=.optscoptest)
 TEST_FILES_CLEAN_STRUCT		= $(TEST_FILES:.scop=.structest)
 TEST_FILES_CLEAN_SCAL		= $(TEST_FILES:.scop=.scaltest)
+TEST_FILES_CLEAN_OUTSCOP	= $(TEST_FILES:.scop=.outscop)
 
 BASE_TEST_FILES			= $(TEST_FILES:.scop=)
 
@@ -76,7 +78,8 @@ CLEANFILES			=		\
 	$(TEST_FILES_CLEAN_CANDL)		\
 	$(TEST_FILES_CLEAN_OPTSCOP)		\
 	$(TEST_FILES_CLEAN_SCAL)		\
-	$(TEST_FILES_CLEAN_STRUCT)
+	$(TEST_FILES_CLEAN_STRUCT)		\
+	$(TEST_FILES_CLEAN_OUTSCOP)
 
 
 EXTRA_DIST	+=				\
@@ -86,6 +89,7 @@ EXTRA_DIST	+=				\
 	$(TEST_FILES_STRUCT)			\
 	$(TEST_FILES_OPT)			\
 	$(TEST_FILES_SCAL)			\
+	$(TEST_FILES_DEPSCOP)			\
 	$(check_SCRIPTS)
 
 
