git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@18063 d2347644-e8e6-0310-9099-9a715ae17836

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -56,7 +56,10 @@ TEST_FILES             	=			\
 	ax-do.scop				\
 	gemver.scop				\
 	matmul.scop				\
-	swim.scop
+	swim.scop				\
+	simple1.scop				\
+	lu.scop					\
+	jacobi1d.scop
 
 
 TEST_FILES_DEP			= $(TEST_FILES:.scop=.dep)
