fixes for compilation with gmp - there is no longer a mpz_add_si, instead use mpz_sub_ui for CANDL_decrement; replace some of the Entier assignments with CANDL_assign; substract -> subtract
git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@19251 d2347644-e8e6-0310-9099-9a715ae17836

--- a/include/candl/candl.h.in
+++ b/include/candl/candl.h.in
@@ -116,8 +116,8 @@
 
 /* Binary operators on 'Value' or 'Entier' */
 #define CANDL_increment(ref,val)       (mpz_add_ui((ref),(val),1))
-#define CANDL_decrement(ref,val)       (mpz_add_si((ref),(val),-1))
-#define CANDL_substract(ref,val1,val2) (mpz_sub((ref),(val1),(val2)))
+#define CANDL_decrement(ref,val)       (mpz_sub_ui((ref),(val),1))
+#define CANDL_subtract(ref,val1,val2) (mpz_sub((ref),(val1),(val2)))
 #define CANDL_oppose(ref,val)          (mpz_neg((ref),(val)))
 
 /* Conditional operations on 'Value' or 'Entier' */
