--- a/configure.in
+++ b/configure.in
@@ -152,10 +152,10 @@ else
 		                  __gmpz_init,
 		                  [LIBS="$LIBS -lgmp"],
 				  [echo "Can't find gmp library." &&
-				   echo "MP version will not be builded." &&
+				   echo "MP version will not be built." &&
 				   TO_BUILD_MP=""])],
 		    [echo "Can't find gmp headers." &&
-		     echo "MP version will not be builded." &&
+		     echo "MP version will not be built." &&
 		     TO_BUILD_MP=""])
   else
     dnl Default given by --with-X is "yes", --without-X is "no". We also
