--- a/configure.in
+++ b/configure.in
@@ -201,7 +201,7 @@ dnl  **************************************************************************/
 
 dnl Substitutions to do.
 AC_SUBST(BITS)
-AC_SUBST(DEFINE_HAS_CLAN_LIB)
+AC_SUBST(DEFINE_HAS_SCOPLIB_LIB)
 AC_SUBST(ac_aux_dir)
 
 dnl Configure Makefiles.
