--- a/include/candl/candl.h.in
+++ b/include/candl/candl.h.in
@@ -44,7 +44,7 @@
 
 # define CANDL_RELEASE "@PACKAGE_VERSION@"
 # define CANDL_VERSION "@BITS@"
-@DEFINE_HAS_CLAN_LIB@
+@DEFINE_HAS_SCOPLIB_LIB@
 
 # include <piplib/piplib@BITS@.h>
 # include <candl/options.h>
