git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@28214 d2347644-e8e6-0310-9099-9a715ae17836

--- a/include/candl/candl.h.in
+++ b/include/candl/candl.h.in
@@ -63,7 +63,7 @@
 # define CANDL_WAW    3
 # define CANDL_RAR    4
 
-# define CANDL_AFFECTATION 1
+# define CANDL_ASSIGNMENT  1
 # define CANDL_P_REDUCTION 2
 # define CANDL_M_REDUCTION 3
 # define CANDL_T_REDUCTION 4
