git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@35848 d2347644-e8e6-0310-9099-9a715ae17836

--- a/configure.in
+++ b/configure.in
@@ -34,7 +34,7 @@ dnl ***************************************************************************/
 
 AC_PREREQ(2.13)
 dnl Fill here the @bug email adress.
-AC_INIT([candl], [0.4.0], [cedric.bastoul@inria.fr,pouchet@cse.ohio-state.edu])
+AC_INIT([candl], [0.5.0], [cedric.bastoul@inria.fr,pouchet@cse.ohio-state.edu])
 dnl A common file, which serve as a test.
 AC_CONFIG_SRCDIR([include/candl/program.h])
 dnl Put as most as possible configuration files to an auxialiry
@@ -202,6 +202,7 @@ dnl  **************************************************************************/
 dnl Substitutions to do.
 AC_SUBST(BITS)
 AC_SUBST(DEFINE_HAS_SCOPLIB_LIB)
+AC_SUBST(DEFINE_HAS_ISL_LIB)
 AC_SUBST(ac_aux_dir)
 
 dnl Configure Makefiles.
