git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@36163 d2347644-e8e6-0310-9099-9a715ae17836

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -44,6 +44,7 @@ MAINTAINERCLEANFILES	= Makefile.in
 pkginclude_HEADERS 	=			\
 	candl/candl.h				\
 	candl/dependence.h			\
+	candl/ddv.h				\
 	candl/matrix.h				\
 	candl/options.h				\
 	candl/program.h				\
