git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@37834 d2347644-e8e6-0310-9099-9a715ae17836

--- a/configure.in
+++ b/configure.in
@@ -148,8 +148,7 @@ else
     echo "Mode normal GMP"
     TO_BUILD="$TO_BUILD MP"
     AC_CHECK_HEADER(gmp.h,
-                    [AC_CHECK_LIB(gmp,
-		                  __gmpz_init,
+                    [AC_SEARCH_LIBS([__gmpz_init], [gmp],
 		                  [LIBS="$LIBS -lgmp"],
 				  [echo "Can't find gmp library." &&
 				   echo "MP version will not be built." &&
@@ -181,8 +180,7 @@ else
     AC_CHECK_HEADER(gmp.h,
                     [],
                     [AC_MSG_ERROR(Can't find gmp headers.)])
-    AC_CHECK_LIB(gmp,
-                 __gmpz_init,
+    AC_SEARCH_LIBS([__gmpz_init], [gmp],
                  [LIBS="$LIBS -lgmp"],
                  [AC_MSG_ERROR(Can't find gmp library.)])
 
