git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@38664 d2347644-e8e6-0310-9099-9a715ae17836

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -48,5 +48,6 @@ pkginclude_HEADERS 	=			\
 	candl/matrix.h				\
 	candl/options.h				\
 	candl/program.h				\
+	candl/pruning.h				\
 	candl/statement.h			\
 	candl/violation.h
