git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@42352 d2347644-e8e6-0310-9099-9a715ae17836

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -54,6 +54,7 @@ libcandl_la_SOURCES 	=			\
 	isl-wrapper.c				\
 	matrix.c				\
 	options.c				\
+	piplib-wrapper.c			\
 	program.c				\
 	pruning.c				\
 	statement.c				\
