git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@42353 d2347644-e8e6-0310-9099-9a715ae17836

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -47,6 +47,7 @@ pkginclude_HEADERS 	=			\
 	candl/ddv.h				\
 	candl/matrix.h				\
 	candl/options.h				\
+	candl/piplib-wrapper.h			\
 	candl/program.h				\
 	candl/pruning.h				\
 	candl/statement.h			\
