git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@42367 d2347644-e8e6-0310-9099-9a715ae17836

--- a/configure.in
+++ b/configure.in
@@ -135,7 +135,9 @@ AC_ARG_ENABLE(mp-version,
 AC_ARG_ENABLE(piplib-hybrid,
 	[  --enable-piplib-hybrid   Link with piplib-hybrid],
 	[ echo "Piplib-hybrid support : $enableval" &&
-          CPPFLAGS=-DCANDL_HAS_PIPLIB_HYBRID])
+          if test "x$enableval" = "xyes"; then 
+            CPPFLAGS=-DCANDL_HAS_PIPLIB_HYBRID
+          fi])
 
 
 dnl /**************************************************************************
