git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@42547 d2347644-e8e6-0310-9099-9a715ae17836

--- a/include/candl/candl.h.in
+++ b/include/candl/candl.h.in
@@ -66,6 +66,7 @@
 # define CANDL_WAR    2
 # define CANDL_WAW    3
 # define CANDL_RAR    4
+# define CANDL_RAW_SCALPRIV	5
 
 # define CANDL_ASSIGNMENT  1
 # define CANDL_P_REDUCTION 2
