--- a/include/candl/macros.h.in
+++ b/include/candl/macros.h.in
@@ -43,27 +43,6 @@
 # define CANDL_MACROS_H
 
 # include <piplib/piplib@BITS@.h>
-# include <candl/options.h>
-# include <candl/matrix.h>
-# include <candl/dependence.h>
-# include <candl/ddv.h>
-# include <candl/violation.h>
-# include <candl/pruning.h>
-
-# define CANDL_UNDEFINED -1 /* Must be negative (we do use that property).
-                             * All other constants have to be different.
-                             */
-
-# define CANDL_RAW    1
-# define CANDL_WAR    2
-# define CANDL_WAW    3
-# define CANDL_RAR    4
-# define CANDL_RAW_SCALPRIV	5
-
-# define CANDL_ASSIGNMENT  1
-# define CANDL_P_REDUCTION 2
-# define CANDL_M_REDUCTION 3
-# define CANDL_T_REDUCTION 4
 
 # define CANDL_EQUAL 1
 # define CANDL_POSIT 2
@@ -83,6 +62,11 @@
 /* Useful macros. */
 # define CANDL_max(x,y)    ((x) > (y)? (x) : (y))
 # define CANDL_min(x,y)    ((x) < (y)? (x) : (y))
+
+# define CANDL_info(msg)                                                   \
+         do {                                                              \
+           fprintf(stderr,"[Candl] Info: "msg" (%s).\n", __func__);        \
+         } while (0)
 
 # define CANDL_error(msg)                                                  \
          do {                                                              \
