--- a/Makefile.am
+++ b/Makefile.am
@@ -72,9 +72,9 @@ AM_CFLAGS = $(CFLAGS_WARN)
 
 EXTRA_DIST		= COPYING.LESSER AUTHORS
 
-libcandl_la_LIBADD   = @OSL_LIBS@ @PIPLIB_LIBS@ @SCOPLIB_LIBS@ $(OSL_LA)
-libcandl_la_CPPFLAGS = @OSL_CPPFLAGS@ @PIPLIB_CPPFLAGS@ @SCOPLIB_CPPFLAGS@  -g
-libcandl_la_LDFLAGS  = @OSL_LDFLAGS@ @PIPLIB_LDFLAGS@ @SCOPLIB_LDFLAGS@ 
+libcandl_la_LIBADD   = @OSL_LIBS@ @PIPLIB_LIBS@ $(OSL_LA)
+libcandl_la_CPPFLAGS = @OSL_CPPFLAGS@ @PIPLIB_CPPFLAGS@ -g
+libcandl_la_LDFLAGS  = @OSL_LDFLAGS@ @PIPLIB_LDFLAGS@ 
 libcandl_la_SOURCES =        \
 	source/dependence.c        \
 	source/ddv.c               \
@@ -90,9 +90,9 @@ libcandl_la_SOURCES =        \
 
 #############################################################################
 
-LDADD              = @OSL_LIBS@ @PIPLIB_LIBS@ @SCOPLIB_LIBS@ libcandl.la
-candl_CPPFLAGS     = @OSL_CPPFLAGS@ @PIPLIB_CPPFLAGS@ @SCOPLIB_CPPFLAGS@ -g -Wall
-candl_LDFLAGS      = #@OSL_LDFLAGS@ @PIPLIB_LDFLAGS@ @SCOPLIB_LDLAGS@ # TO BE REMOVED
+LDADD              = @OSL_LIBS@ @PIPLIB_LIBS@ libcandl.la
+candl_CPPFLAGS     = @OSL_CPPFLAGS@ @PIPLIB_CPPFLAGS@ -g -Wall
+candl_LDFLAGS      = #@OSL_LDFLAGS@ @PIPLIB_LDFLAGS@ # TO BE REMOVED
 candl_DEPENDENCIES = libcandl.la
 candl_SOURCES      = source/candl.c
 
