Add piplib as submodule, see the TODO

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,12 +36,16 @@
 #############################################################################
 
 if BUNDLED_OSL
-    MAYBE_OSL = osl
-    OSL_LA = $(top_builddir)/osl/source/libosl.la
+  MAYBE_OSL = osl
+  OSL_LA = $(top_builddir)/osl/source/libosl.la
+endif
+if BUNDLED_PIPLIB
+  MAYBE_PIPLIB = piplib
+  PIPLIB_LA = $(top_builddir)/piplib/source/libpiplib$(BITS).la
 endif
 
-SUBDIRS         = $(MAYBE_OSL) doc tests
-DIST_SUBDIRS    = $(MAYBE_OSL) doc tests
+SUBDIRS         = $(MAYBE_OSL) $(MAYBE_PIPLIB) doc tests
+DIST_SUBDIRS    = $(MAYBE_OSL) $(MAYBE_PIPLIB) doc tests
 ACLOCAL_AMFLAGS = -I m4
 
 #############################################################################
@@ -73,7 +77,7 @@ AM_CFLAGS = $(CFLAGS_WARN)
 
 EXTRA_DIST		= COPYING.LESSER AUTHORS
 
-libcandl_la_LIBADD   = @OSL_LIBS@ @PIPLIB_LIBS@ $(OSL_LA)
+libcandl_la_LIBADD   = @OSL_LIBS@ @PIPLIB_LIBS@ $(OSL_LA) $(PIPLIB_LA)
 libcandl_la_CPPFLAGS = @OSL_CPPFLAGS@ @PIPLIB_CPPFLAGS@ -g
 libcandl_la_LDFLAGS  = @OSL_LDFLAGS@ @PIPLIB_LDFLAGS@ 
 libcandl_la_SOURCES =        \
