--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -478,7 +478,8 @@ WARN_LOGFILE           =
 # with spaces.
 
 INPUT                  = @top_srcdir@/source \
-                         @top_srcdir@/include/candl
+                         @top_srcdir@/include/candl \
+                         include/candl/macros.h
 
 # This tag can be used to specify the character encoding of the source files that 
 # doxygen parses. Internally doxygen uses the UTF-8 encoding, which is also the default 
